[package]
name = "sports_time_puller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.14", default-features = false, features = [
  "serde",
  "csr",
  "nightly"
] }
leptos_meta = { version = "0.6.14", default-features = false, features = ['csr', 'nightly'] }
leptos_router = { version = "0.6.14", default-features = false, features = ['csr', 'nightly'] }
log = "0.4"
serde = {version = "1.0.152", features = ['derive']}
serde_json = "1.0.91"
wasm-bindgen = "0.2.83"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.12.7", features = ['json'] }
chrono = "0.4.23"
num_enum = "0.7.3"
num-traits = "0.2.15"
lazy_static = "1.4.0"

[package.metadata.cargo-all-features]
denylist = [
  "actix-files",
  "actix-web",
  "console_error_panic_hook",
  "console_log",
  "futures",
  "leptos_actix",
  "simple_logger",
  "wasm-bindgen",
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
